--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run start-server & npm run build-watch",
-    "start-server": "nodemon --watch server -e js,html server/index.js",
+    "start-server": "nodemon --watch server -e js,html server/main.js",
     "build-watch": "webpack -w",
     "seed": "node ./bin/seed",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,13 +15,16 @@
   "dependencies": {
     "express": "^4.16.4",
     "morgan": "^1.9.1",
+    "pg": "^7.9.0",
+    "pg-hstore": "^2.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^5.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
