--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "lodash": "^4.17.11",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "react": "^16.8.6",
@@ -24,13 +29,15 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "sequelize": "^5.2.13"
+    "sequelize": "^5.2.13",
+    "volleyball": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^2.1.1",
     "nodemon": "^1.18.10",
     "style-loader": "^0.23.1",
