--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "boilermaker",
   "version": "1.0.0",
-  "description": "",
+  "description": "boilermaker",
+  "engines": {
+    "node": ">= 7.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "npm run start-server & npm run build-watch",
-    "start-server": "nodemon --watch server -e js,html server/main.js",
+    "start-server": "nodemon --watch server -e js,html server/index.js",
     "build-watch": "webpack -w",
     "seed": "node ./bin/seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Brandon Rowe",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "history": "^4.9.0",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
@@ -30,16 +37,21 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.2.13",
+    "socket.io": "^2.2.0",
     "volleyball": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
+    "chai": "^4.2.0",
     "css-loader": "^2.1.1",
+    "mocha": "^6.1.3",
     "nodemon": "^1.18.10",
+    "redux-devtools-extension": "^2.13.8",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
